[update]updated tuition rates for 2015-16

--- a/public/admissions-3.html
+++ b/public/admissions-3.html
@@ -163,34 +163,36 @@
 				<p><strong>All matters relating to individual tuition assistance are held in the strictest confidence between the receiving family and school administration only.</strong></p>
 				
 				<div class="sptr-1"></div>
-				<h2>Tuition Grades TK-8 ( 2014/2015 School Year )</h2>
-					<table cellspacing="0" cellpadding="0" width="100%" border="0" class='datatable'>
-						<tr>
-							<th width="180">Grades TK-8 </th>
-							<th>Standard Rate</th>
-							<th>Parishioner Rate</th>
-						</tr>
-						<tr>
-							<th>One Student </th>
-							<td>$5,936 <!--$5,700-->  </td>
-							<td>$4,794<!--$4,600-->  </td>
-						</tr>
-						<tr>
-							<th>Two Students   </th>
-							<td>$11,278 <!--$10,550--> </td>
-							<td>$9,109 <!--$8,510--></td>
-						</tr>
-						<tr>
-							<th>Three Students</th>
-							<td>$16,027 <!--$14,820--></td>
-							<td>$12,944 <!--$11,960--></td>
-						</tr>
-						<tr>
-							<th>Four or More Students </th>
-							<td>$20,182 <!--$18,530--></td> 
-							<td>$16,300 <!--$14,950--></td>
-						</tr>
-					</table>
+				<h2>Tuition Grades TK-8 ( 2015/2016 School Year )</h2>
+				<table cellspacing="0" cellpadding="0" width="100%" border="0" class='datatable'>
+					<tr>
+          <th width="180">Grades TK-8 </th>
+						<th>Parishioner Rate</th>
+						<th>Standard Rate</th>
+					</tr>
+					<tr>
+						<th>One Student </th>
+						<td><!--$5,936-->$4,938</td>
+						<td><!--$4,794-->$6,114</td>
+					</tr>
+					<tr>
+						<th>Two Students   </th>
+						<td><!--$11,278-->$9,382</td>
+						<td><!--$9,109-->$11,616</td>
+					</tr>
+					<tr>
+						<th>Three Students</th>
+						<td><!--$16,027-->$13,332</td>
+						<td><!--$12,944-->$16,508</td>
+					</tr>
+					<tr>
+						<th>Four or More Students </th>
+						<td><!--$20,182-->$16,789</td> 
+						<td><!--$16,300-->$20,618</td>
+					</tr>
+				</table>
+				<p>$305.00 Registration Fee per Student in Gr 1-8<br/>
+$280.00 Registration Fee per Student in Tk Or Kinder</p>
 					
 			</div>
 			<div class="col-200-r">			
