updates as per doc file story:#101741068

--- a/public/about-us-4.html
+++ b/public/about-us-4.html
@@ -195,8 +195,8 @@
 					
 					<tr>
 						<th width="180">Transitional Kindergarten</th>
-						<td width="200">Mrs. Mazzaferro</td>
-						<td>Teaching Asst: Mrs. Clark</td>
+						<td width="200">Mrs. Pisani</td>
+						<td>Teaching Asst: Ms. Ballew</td>
 					</tr>
 					
 					<tr>
@@ -217,19 +217,19 @@ Teaching Asst: Ms. Scheuneman</td>
 						<td>Teaching Asst: Ms. McGuire</td>
 					</tr>
 					<tr>
-						<th >3rd grade</th>
-						<td>Miss Taricco</td>
-						<td>Teaching Asst:  Mrs. Pisani</td>
+						<th>3rd grade</th>
+						<td>Mrs. Mazzaferro</td>
+						<td>Teaching Asst:  Mr. Leonardini</td>
 					</tr>
 					<tr>
 						<th >4th grade</th>
 						<td>Ms. Hansen</td>
-						<td>&nbsp;</td>
+						<td>Teaching Asst:  Mrs. Clark</td>
 					</tr>
 					<tr>
 						<th >5th grade</th>
-						<td>Mr. Grogan</td>
-						<td>&nbsp;</td>
+						<td>Mrs. Reilly</td>
+						<td>Teaching Asst: Mrs. Clark</td>
 					</tr>
 					<tr>
 						<th >6th grade</th>
@@ -280,7 +280,7 @@ Teaching Asst: Ms. Scheuneman</td>
 					<tr>
 						<th >Extended Care Director</th>
 						<td>Mrs. Avenell</td>
-						<td>Extension Aide: Mr. Werry<br />Extension Aide: Ms. Scheuneman</td>
+						<td>Extension Aide: Mr. Benton<br />Extension Aide: Ms. Ward</td>
 					</tr>
 					<tr>
 						<th >Plant Manager</th>
