--- a/public/academics-5.html
+++ b/public/academics-5.html
@@ -160,20 +160,20 @@
 				
 				<h3>Report Cards</h3>
 				<p>Report cards are given in grades 1 through 8 at the close of each trimester (approximately twelve weeks of instruction).  Kindergarten report cards are distributed twice a year.  Report cards are to be signed and returned to the teachers within three school days.  Students who have been absent 10 or more days during a trimester may receive an “incomplete” in the subject areas affected.  Grades must be contested within one week.  A formal parent-teacher conference will accompany the distribution of the first report card.</p>
-				<h2>For the 2014/2015 school year report cards will be sent home on</h2>
+				<h2>For the 2015/2016 school year report cards will be sent home on</h2>
 				<table cellspacing="0" cellpadding="0" width="100%" border="0" class='datatable'>
 					
 					<tr>
 						<th width="180">First  Trimester</th>
-						<td>November 21, 2014</td>
+						<td>November 20, 2015</td>
 					</tr>
 					<tr>
 						<th>Second Trimester</th>
-						<td>March 13, 2015</td>
+						<td>March 4, 2016</td>
 					</tr>
 					<tr>
 						<th>Third Trimester</th>
-						<td>June 12, 2015</td>
+						<td>June 10, 2016 (mailed)</td>
 					</tr>
 				</table>
 				<p>Dates for sending report cards home are also indicated on the school calendar.</p>
