--- a/public/student-life-2.html
+++ b/public/student-life-2.html
@@ -145,7 +145,7 @@
 	<!-- Start  banner-->
 	<div class="banner-innerpage" >
 		<div class="banner-inner-innerpage">
-			<img alt="" src="images/student-life-2.jpg"/>	
+			<img alt="" src="images/student-life-2new.jpg"/>	
 			<div class="banner-title" ><div class="welcome-text">Extended Care</div></div>	
 		</div>
 	</div>
