--- a/public/parents-5.html
+++ b/public/parents-5.html
@@ -166,10 +166,10 @@
 				<p>The Holiday Home Tour is a celebrated event that draws thousands to the “Fabulous 40s” to view homes decked out for the holidays by top decorators.  The Tour is a decades-long tradition and a favorite among families, parishioners and community members. </p>
 				<p>Spring brings the Annual Golf / Tennis Tournament as well as the Crab Feed (aka Spring Event).</p>
 				<ul class="bullet-list1">
-					<li>Fall Festival – October  4, 2014</li>
-					<li>Holiday Home Tour - December 5 – 7, 2014</li>
-					<li>Crab Feed – February 7, 2015 (tentative)</li>
-					<li>Tennis Tournament - TBD</li>
+					<li>Fall Festival – October  3, 2015</li>
+					<li>Holiday Home Tour - December 4 – 6, 2015</li>
+					<li>Crab Feed – February 20, 2016 (tentative)</li>
+					<li>Tennis Tournament - May 13, 2016</li>
 				</ul>
 				
 			</div>
