content updates story : #101741068

--- a/public/about-us-4.html
+++ b/public/about-us-4.html
@@ -202,8 +202,7 @@
 					<tr>
 						<th>Kindergarten</th>
 						<td>Mrs. Paquette</td>
-						<td>Teaching Asst: Mrs. Amy Sparks<br/>
-Teaching Asst: Ms. Scheuneman</td>
+						<td>Teaching Asst: Mrs. Amy Sparks <!-- <br/>Teaching Asst: Ms. Scheuneman --></td>
 					</tr>
 					
 					<tr>
