--- a/public/our-faith-3.html
+++ b/public/our-faith-3.html
@@ -184,13 +184,13 @@
               <th>January 26</th><td>8:10am</td>
               <td>2nd/6th grade</td></tr>
             <tr>
-              <th>February 24 (Ash Wednesday)</th>
+              <th>February 24 <!--(Ash Wednesday) --></th>
               <td>8:10am</td>
               <td>1st grade</td></tr>
             <tr>
-              <th>March 24 (Accreditation)</th><td>11:00am</td><td>6th grade Living Stations</td></tr>
+              <th>March 24 <!-- (Accreditation) --></th><td>11:00am</td><td>6th grade Living Stations</td></tr>
             <tr>
-              <th>April 27 (Holy Thursday)</th><td>8:10am</td>
+              <th>April 27 <!-- (Holy Thursday)--></th><td>8:10am</td>
               <td>7th grade</td></tr>
             <tr>
               <th>May 25</th><td>8:10am</td>
