update banner & content story:#101741068

--- a/public/about-us-4.html
+++ b/public/about-us-4.html
@@ -279,7 +279,7 @@
 					<tr>
 						<th >Extended Care Director</th>
 						<td>Mrs. Avenell</td>
-						<td>Extension Aide: Mr. Benton<br />Extension Aide: Ms. Ward</td>
+						<td>Extended Care Aide: Mr. Benton<br />Extended Care Aide: Ms. Ward</td>
 					</tr>
 					<tr>
 						<th >Plant Manager</th>
