--- a/public/our-faith-3.html
+++ b/public/our-faith-3.html
@@ -215,7 +215,7 @@
               <td>9:00am</td>
               <td>2nd grade</td></tr>
             <tr>
-              <th>December 8</th><td>8:00am & 12 noon</td><td>Parish Mass</td></tr>
+              <th>December 8</th><td>8:00am or noon</td><td>Parish Mass</td></tr>
             <tr>
               <th>January 14</th><td>9:00am</td>
               <td>8th grade</td></tr>
