--- a/public/parents-5.html
+++ b/public/parents-5.html
@@ -168,7 +168,7 @@
 				<ul class="bullet-list1">
 					<li>Fall Festival – October  3, 2015</li>
 					<li>Holiday Home Tour - December 4 – 6, 2015</li>
-					<li>Crab Feed – February 20, 2016 (tentative)</li>
+					<li>Crab Feed – February 20, 2016 </li>
 					<li>Tennis Tournament - May 13, 2016</li>
 				</ul>
 				
