[Update] content updates story - #103885166

--- a/public/shpsholidayhometour.com/directions.htm
+++ b/public/shpsholidayhometour.com/directions.htm
@@ -19,31 +19,33 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         <blockquote> 
           <p align="left"><br>
             <B><FONT size=3>Directions to the Tour</FONT></B></p>
-          <p>The tour starts on 38th Street between J and Folsom Streets. Look for the posted signs!</p>
-		  <p>The tour will wind its way through East Sacramento. You may start the home tour at any home, and parking is available outside all the tour homes and at the Holiday Cafe & Boutique, located at the school.</p>
+          <p>The tour starts on 47th Street between M and Folsom Boulevard. Look for the posted signs!</p>
+		  <p>The tour will wind its way through East Sacramento. You may start the home tour at any home, and parking is available outside all the tour homes and at the Holiday Caf&eacute; & Boutique, located at the school.</p>
           <p><br>
             <strong>From Auburn/Roseville </strong><br/>
-			Take the J Street exit off of the Capital City Freeway.<br/>
-			Head east to 38th Street and turn right for house #1. Or turn right on 39th Street for Boutique at the school.</p>
+			Take the J Street exit off of the Capital City Freeway and turn right.<br/>
+			Turn left on 39th Street for Sacred Heart School, Boutique and Caf&eacute;. To go straight to the first house, continue east on J Street to 47th Street and turn right for house #1.</p>
           <p><br>
             <strong>From Placerville</strong><br>
 			Take Highway 50 to the 65th Street exit.<br/>
-			Turn right on 65th St.<br/>
+			Turn right on 65th Street.<br/>
 			Go one block to Folsom Boulevard and turn left.<br/>
-			Go to 38th Street and turn right.<br/>
-			The house will be on your left.</p>
+      Go to 47th Street and turn right.<br/>
+      The house will be on your left.</p>
           <p><strong><br>
             From Stockton and Elk Grove </strong><br>
-			Take Highway 99 North to the H street exit. <br/>
-			Head east (right) to 39th St. and turn right. <br/>
-			The school is on your right. Continue down 39th street, take a right on M Street and follow to 38th Street, turn right on 38th and the house will be on your left.
+			Take Highway 99 North to the H street exit. <br>
+      Head east (right) to 39th St. and turn right. <br>
+      The school, Caf&eacute; and Boutique are on your right. Continue down 39th street, take a left on M Street and follow to 47th Street, turn right on 47th and the house will be on your right.
+
             </p>
           <p><br>
             <strong>From San Francisco </strong><br>
-			Take Highway 80 to the Capital City Freeway. <br/>
-			Take the H Street exit. <br/>
-			Head east (right) to 39th Street and turn right. <br/>
-			The school is on your right. Continue down 39th street, take a right on M Street and follow to 38th Street, turn right on 38th and the house will be on your left.</p>
+			Take Highway 80 to the Capital City Freeway. <br>
+      Take the H Street exit. <br>
+      Head east (right) to 39th Street and turn right. <br>
+      The school is on your right. Continue down 39th street, take a left on M Street and follow to 47th Street, turn right on 47th and the house will be on your right.
+      </p>
         </blockquote>
         <P>&nbsp; 
           <!--End main content area -->
