--- a/public/shpsholidayhometour.com/tour.htm
+++ b/public/shpsholidayhometour.com/tour.htm
@@ -8,31 +8,12 @@ rel=stylesheet>
 cellSpacing=0 cellPadding=4 width=770 border=0>
   <TBODY>
   <TR>
-    <TD class=leftnavtext vAlign=top align=left width=163><!--Start left nav area --><BR>
-   <BR> 
-<font color="#990000"><strong>Holiday Caf&eacute; &amp; Gift Shop</strong></font></p>
-        <p>The Holiday Caf&eacute; &amp; Gift Shop and will be located at Sacred 
-          Heart Parish School at 856 39th Street. Dine and Shop in a convenient, 
-          wonderfully festive holiday atmosphere. It will not be necessary to 
-          purchase a ticket for admission to the caf&eacute; and gift shop.</p>
-        <p> Treat yourself at the gourmet caf&eacute;, featuring elegant and light 
-          refreshments, scrumptious desserts, warm beverages including specialty 
-          coffee, wines and champagne. </p>
-        <p>Perfect for holiday gift-giving, the Gift Shoppe features unique, specialty 
-          merchandise as seen on the home tour and selected exclusively for the 
-          Gift Shop:<br>
-          <br>
-          • Home Accessories <br>
-          • Hostess Gifts <br>
-          • Holiday Ornaments <br>
-          • Candles <br>
-          • Candy <br>
-          • Jams &amp; Jellies <br>
-          • Teacher Gifts <br>
-          • Wreaths and Topiaries</p>
-        <BR>
-        <P align=center><BR>
-        <P align=center>&nbsp;</P></TD>
+    <TD class=leftnavtext vAlign=top align=left width=163><!--Start left nav area -->
+      <BR>
+        <p><img src="images/boutique-page1.jpg"  alt="" /></p>
+        <p><img src="images/boutique-page2.jpg"  alt="" /></p>
+        <p><img src="images/boutique-page3.jpg"  alt="" /></p>
+        </TD>
       <TD class=bodytext vAlign=top width=591> 
         <!--Start main content area -->
         <blockquote> 
