[Updates]add images & content updates story-#103885166

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -9,12 +9,11 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   <TBODY>
   <TR>
       <TD class=leftnavtext vAlign=top align=left width=160> 
-        <!--Start left nav area --><br><br>
-        <div align="center"><img src="images/home_brida2.jpg" width="150" height="116"> 
-        </div>
-        <p align="center"><img src="images/home_03.jpg" width="150" height="112"></p>
-        <p align="center"><img src="images/home_06.jpg" width="150" height="112"></p>
-        <P align=center>&nbsp; 
+        <!--Start left nav area -->
+        <p><img src="images/designers-page1.jpg"  alt="" /></p>
+        <p><img src="images/designers-page2.jpg"  alt="" /></p>
+        <p><img src="images/designers-page3.jpg"  alt="" /></p>
+       
         <P align=center>&nbsp;</P></TD>
       <TD class=bodytext vAlign=top width=594> 
         <!--Start main content area -->
@@ -46,14 +45,28 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 			916-706-2089<br>
             <a href="http://www.kerriekelly.com " target="_blank">www.kerriekelly.com </a>
 					</p>
-		            <p><em>Stone Wood Design, Inc.</em><br>
+		           <!-- <p><em>Stone Wood Design, Inc.</em><br>
 					  Janice Stone Thomas, ASID, CKD<br>
 					  900 46th Street<br>  
 					  Sacramento, CA  95819<br>
 					  916-454-1506 <br>
-					  <a href="mailto:swdesign@pacbell.net" target="_blank">swdesign@pacbell.net<br>
+					  <a href="mailto:swdesign@pacbell.net">swdesign@pacbell.net<br>
 					  <a href="http://www.stonewooddesign.com" target="_blank">www.stonewooddesign.com</a>
 		  					</p>
+					-->
+		  			<p>	<em>Zina Sheya Design</em> <br/>
+						Sacramento CA <br/>
+						916-704-0400 <br/>
+						<a href="http://www.zinasheyadesigns.com" target="_blank">www.zinasheyadesigns.com</a> <br/>
+						<a href="mailto:Info@ZinaSheyaDesigns.com">Info@ZinaSheyaDesigns.com</a> 
+		  			</p>
+					<p><em>Design Alchemy</em> <br/>
+					855 57th Street Ste. D <br/>
+					Sacramento, CA 95818 <br/>
+					Phone:  916.999.1409 <br/>
+					<a href="http://http://designalchemyltd.com" target="_blank">http://designalchemyltd.com</a> <br/>
+					<a href="mailto:Info@DesignAlchemyLtd.com">Info@DesignAlchemyLtd.com</a>
+					</p>
 					<!--<p>
 						<em>JIL Design </em><br/>
 						Irit Winston <br/>
