--- a/public/shpsholidayhometour.com/directions.htm
+++ b/public/shpsholidayhometour.com/directions.htm
@@ -8,12 +8,13 @@ rel=stylesheet>
 cellSpacing=0 cellPadding=4 width=770 border=0>
   <TBODY>
   <TR>
-      <TD class=leftnavtext vAlign=top align=left width=160> 
+      <td class=leftnavtext vAlign=top align=left width=160> 
         <!--Start left nav area -->
-        <div align="center"><br>
-          <br>
-          <img src="images/home_brida.jpg" width="150" height="109"> </div>
-        <P align=center><img src="images/brida_home1.jpg" width="150" height="247"></P></TD>
+        <div align="center">
+        <p><img src="images/directions-page1.jpg"  alt="" /></p>
+        <p><img src="images/directions-page2.jpg"  alt="" /></p>
+        <p><img src="images/directions-page3.jpg"  alt="" /></p>
+        </td>
       <TD class=bodytext vAlign=top width=594> 
         <!--Start main content area -->
         <blockquote> 
