--- a/public/shpsholidayhometour.com/tour.htm
+++ b/public/shpsholidayhometour.com/tour.htm
@@ -10,9 +10,9 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   <TR>
     <TD class=leftnavtext vAlign=top align=left width=163><!--Start left nav area -->
       <BR>
-        <p><img src="images/boutique-page1.jpg"  alt="" /></p>
-        <p><img src="images/boutique-page2.jpg"  alt="" /></p>
-        <p><img src="images/boutique-page3.jpg"  alt="" /></p>
+       <!-- <p><img src="images/boutique-page1.jpg"  alt="" /></p> -->
+        <p><img src="images/tour-page2.jpg"  alt="" /></p>
+        <p><img src="images/tour-page3.jpg"  alt="" /></p>
         </TD>
       <TD class=bodytext vAlign=top width=591> 
         <!--Start main content area -->
