[Updates]Content updates story - #104866180

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -64,7 +64,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 					855 57th Street Ste. D <br/>
 					Sacramento, CA 95818 <br/>
 					Phone:  916.999.1409 <br/>
-					<a href="http://http://designalchemyltd.com" target="_blank">http://designalchemyltd.com</a> <br/>
+					<a href="http://designalchemyltd.com" target="_blank">http://designalchemyltd.com</a> <br/>
 					<a href="mailto:Info@DesignAlchemyLtd.com">Info@DesignAlchemyLtd.com</a>
 					</p>
 					<!--<p>
