[Updates]add new homes & Sponsors story - #105637796

--- a/public/shpsholidayhometour.com/index.html
+++ b/public/shpsholidayhometour.com/index.html
@@ -42,11 +42,10 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
               <TD height="254">
 <div align="center" style="position:relative;">
 	<div class="slide" style="position:absolute; width:230px; height:180px; left:10px; top:6px;">
-    <img src="homes14/images/38th-street-sml-2014.jpg" alt="38th Streets" width="230" height="180" />
-    <img src="homes14/images/40th-street-sml-2014.jpg" alt="40th Streets" width="230" height="180" />
-		<img src="homes14/images/41st-street-sml-2014.jpg" alt="41st Streets" width="230" height="180" />
-    <img src="homes14/images/42nd-street-sml-2014.jpg" alt="42nd Streets" width="230" height="180" />
-    <img src="homes14/images/43rd-street-sml-2014.jpg" alt="43rd Streets" width="230" height="180" />
+    <img src="homes15/images/38th-street-sml-2015.jpg" alt="38th Street 2015" width="230" height="180" />
+    <img src="homes15/images/43rd-street-sml-2015.jpg" alt="43rd Streets" width="230" height="180" />
+		<img src="homes15/images/47th-street-sml-2015.jpg" alt="47th Streets" width="230" height="180" />
+    <img src="homes15/images/m-street-sml-2015.jpg" alt="M Streets" width="230" height="180" />
   </div>
   <!--<div class="slide" style="position:absolute; width:230px; height:180px; left:10px; top:6px;">
     <img src="homes12/images/38th-streets-2012.jpg" alt="38th Streets" width="230" height="180" />
