--- a/public/shpsholidayhometour.com/index.html
+++ b/public/shpsholidayhometour.com/index.html
@@ -43,9 +43,10 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
 <div align="center" style="position:relative;">
 	<div class="slide" style="position:absolute; width:230px; height:180px; left:10px; top:6px;">
     <img src="homes15/images/38th-street-sml-2015.jpg" alt="38th Street 2015" width="230" height="180" />
-    <img src="homes15/images/43rd-street-sml-2015.jpg" alt="43rd Streets" width="230" height="180" />
-		<img src="homes15/images/47th-street-sml-2015.jpg" alt="47th Streets" width="230" height="180" />
-    <img src="homes15/images/m-street-sml-2015.jpg" alt="M Streets" width="230" height="180" />
+    <img src="homes15/images/41st-street-sml-2015.jpg" alt="41st Streets 2015" width="230" height="180" />
+    <img src="homes15/images/43rd-street-sml-2015.jpg" alt="43rd Streets 2015" width="230" height="180" />
+		<img src="homes15/images/47th-street-sml-2015.jpg" alt="47th Streets 2015" width="230" height="180" />
+    <img src="homes15/images/m-street-sml-2015.jpg" alt="M Streets 2015" width="230" height="180" />
   </div>
   <!--<div class="slide" style="position:absolute; width:230px; height:180px; left:10px; top:6px;">
     <img src="homes12/images/38th-streets-2012.jpg" alt="38th Streets" width="230" height="180" />
@@ -86,9 +87,12 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
                 <area shape="rect" coords="469,233,559,270" href="designers.htm" target="iframe1">
 			          <area shape="rect" coords="575,233,665,270" href="sponsors.htm" target="iframe1">	
                 <area shape="rect" coords="679,232,795,254" href="boutique-cafe.htm" target="iframe1">
-                  <area shape="rect" coords="704,159,733,194" href="https://twitter.com/@sh_tour" title="Twitter" alt="Twitter" target="_blank">
-                  <area shape="rect" coords="735,159,763,194" href="https://instagram.com/sh_hometour" title="Instagram" alt="Instagram" target="_blank">
-                  <area shape="rect" coords="765,159,790,194" href="https://www.pinterest.com/search/pins/?q=Sacred%20Heart%20Holiday%20Home%20Tour" title="Pinterest" alt="Pinterest" target="_blank">
+                
+                <area shape="rect" coords="675,159,705,194" href="https://www.facebook.com/SacredHeartHomeTour" title="Facebook" alt="Facebook" target="_blank">
+                <area shape="rect" coords="704,159,733,194" href="https://twitter.com/@sh_tour" title="Twitter" alt="Twitter" target="_blank">
+                <area shape="rect" coords="735,159,763,194" href="https://instagram.com/sh_hometour" title="Instagram" alt="Instagram" target="_blank">
+                <area shape="rect" coords="765,159,790,194" href="https://www.pinterest.com/search/pins/?q=Sacred%20Heart%20Holiday%20Home%20Tour" title="Pinterest" alt="Pinterest" target="_blank">
+                  
                   </MAP>
                   <IMG height=254 
             src="images/banner_main11.jpg" width=799 useMap=#FPMap0 
