[Updates]2016 new year content update story-#130438443

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -21,6 +21,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <p align="left"><BR>
             <B><FONT size=3>The Designers
             </FONT></B></p>
+            <p>Coming Soon!</p>
 <!--<p>
 <FONT size=3><font size="2">The designers who are generously lending their time &amp; talents to the tour: </font></FONT></p>
           
@@ -31,20 +32,22 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 						530-756-6698 <br/>
             <a href="http://www.beyondthegardengates.com " target="_blank">http://www.beyondthegardengates.com </a>
 					</p>-->
-          <p>
-						<em>Haus Home and Gift </em><br>
-            5601 H Street<br>
-						Sacramento, CA 95819<br>
-						916-448-4100 <br>
-            <a href="http://www.haushomeandgift.com" target="_blank">www.haushomeandgift.com</a><br>
-            <a href="mailto:info@haushomeandgift.com">info@haushomeandgift.com</a></p>
-          <p><em>Kerrie Kelly Design Lab</em><br>
-            Kerrie Kelly<br>
-			5704 Elvas Avenue<br>
-			Sacramento, CA 95819<br>
-			916-706-2089<br>
-            <a href="http://www.kerriekelly.com " target="_blank">www.kerriekelly.com </a>
-					</p>
+			<!--
+			<p>
+				<em>Haus Home and Gift </em><br>
+				5601 H Street<br>
+				Sacramento, CA 95819<br>
+				916-448-4100 <br>
+				<a href="http://www.haushomeandgift.com" target="_blank">www.haushomeandgift.com</a><br>
+				<a href="mailto:info@haushomeandgift.com">info@haushomeandgift.com</a></p>
+				<p><em>Kerrie Kelly Design Lab</em><br>
+					Kerrie Kelly<br>
+					5704 Elvas Avenue<br>
+					Sacramento, CA 95819<br>
+					916-706-2089<br>
+					<a href="http://www.kerriekelly.com " target="_blank">www.kerriekelly.com </a>
+				</p>
+				-->
 		           <!-- <p><em>Stone Wood Design, Inc.</em><br>
 					  Janice Stone Thomas, ASID, CKD<br>
 					  900 46th Street<br>  
@@ -54,6 +57,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 					  <a href="http://www.stonewooddesign.com" target="_blank">www.stonewooddesign.com</a>
 		  					</p>
 					-->
+					<!--
 		  			<p>	<em>Zina Sheya Design</em> <br/>
 						Sacramento CA <br/>
 						916-704-0400 <br/>
@@ -66,7 +70,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 					Phone:  916.999.1409 <br/>
 					<a href="http://designalchemyltd.com" target="_blank">http://designalchemyltd.com</a> <br/>
 					<a href="mailto:Info@DesignAlchemyLtd.com">Info@DesignAlchemyLtd.com</a>
-					</p>
+					</p> -->
 					<!--<p>
 						<em>JIL Design </em><br/>
 						Irit Winston <br/>
