--- a/public/shpsholidayhometour.com/index.html
+++ b/public/shpsholidayhometour.com/index.html
@@ -113,9 +113,9 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
   <TR>
       <TD width=800 height=20 bgColor=#7F0000 class=footertext> 
         <!-- Begin Footer -->
-        <div align="center">
-<p><FONT 
-      color=#ffffff>856 39th Street Sacremento, CA | <!--916.556.5050 |--> <a href="http://sacredhearthometour.com">http://sacredhearthometour.com</a>  <!--www.SHPSHolidayHomeTour.com--><br>
+        <div align="center" style="padding-top:2px;">
+<p><FONT color=#ffffff>856 39th Street Sacremento, CA | <!--916.556.5050 |--> <a href="http://sacredhearthometour.com">http://sacredhearthometour.com</a>  <!--www.SHPSHolidayHomeTour.com--></FONT></p>
+<p>
         <a href="main.html" target="iframe1">WELCOME</a>&nbsp; ::&nbsp; 
         <A href="tour.htm" target=iframe1></A><a href="tickets.htm" target="iframe1">TICKETS</a>&nbsp; :: &nbsp; 
         <A href="tour.htm" target=iframe1>THE TOUR</A>&nbsp; ::&nbsp; 
@@ -123,7 +123,7 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
         <A href="homes.htm" target=iframe1>HOMES</A>&nbsp; ::&nbsp; 
         <A href="designers.htm" target=iframe1>DESIGNERS</A>&nbsp; ::&nbsp; SPONSORS&nbsp;&nbsp;::&nbsp;&nbsp;
         <A href="boutique-cafe.htm" target=iframe1>Boutique & Caf&eacute;</A>
-        </FONT>
+        
       <FONT color=#efead9><B><A href="http://www.premiere-ca.com/agent_login.asp" target=iframe1><br>
             </A></B></font><FONT color=#ffffff> 
             <!-- End Footer -->
