[update]picotal story 132644047 update

--- a/public/shpsholidayhometour.com/boutique-cafe.htm
+++ b/public/shpsholidayhometour.com/boutique-cafe.htm
@@ -18,14 +18,49 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
       <TD class=bodytext vAlign=top width=587>
         <!--Start main content area -->
         <blockquote> 
-          <p align="left"><BR>
-            <B><FONT size=3>Holiday Boutique & Caf&eacute;</FONT></B><br>
+          <p align="left"><br/>
+            <B><FONT size=3>Holiday Boutique & Caf&eacute;</FONT></B></p>
            <p>The Holiday Boutique and Caf&eacute; are located at Sacred Heart Parish School at 856-39<sup>th</sup> Street. </p>
            <p>Shop for one of a kind holiday gifts and dine in a convenient, festive atmosphere. Tour tickets are not required for admission to the Boutique & caf&eacute; - all are welcome.</p>
            <p>The Holiday Caf&eacute; & Boutique, feature unique gifts & holiday merchandise selected exclusively for Sacred Heart by designers & style experts.</p>
            <p>While you are there treat yourself to the renowned Home Tour caf&eacute;, featuring tasty sandwiches, fresh salads, toasty soups and gourmet desserts. Specialty coffee, tea, mulled cider, soda, wine and beer are also available.</p>
+           <p>The Treasured Home<br/>
+<a href="https://www.thetreasuredhome.com/" target="_blank">www.thetreasuredhome.com</a></p>
+
+<p>J. Brian's Valley Harvest</p>
+
+<p>Pink House</p>
+<p>Design Alchemy<br/>
+<a href="http://designalchemyltd.com/" target="_blank">designalchemyltd.com</a></p>
+
+<p>Alllie Studios<br/>
+<a href="http://alliestudio.com/t/sacramento" target="_blank">alliestudio.com/t/sacramento</a></p>
+
+<p>Murphy & Gert</p>
+
+<p>Vintage Pop Art</p>
+
+<p>C & C Distributors</p>
+
+<p>Serendipity Succulents</p>
+
+<p>It’s In the Bag</p>
+
+<p>Tila Madrigal</p>
+
+<p>Rina DeRose</p>
+
+<p>The Little Way</p>
+
+<p>Renee Luckenbill</p>
+
+<p>Beyond the Garden Gate<br/>
+<a href="http://beyondthegardengates.com/" target="_blank">beyondthegardengates.com</a></p>
+
+<p>Schola Cantorum</p><br/>
+
         </blockquote>
-        <P>&nbsp; 
+        
           <!--End main content area -->
       </TD>
     </TR></TBODY></TABLE></BODY></HTML>
