[Update]remove www.designsbycp.com in footer section story#132754231

--- a/public/shpsholidayhometour.com/index.html
+++ b/public/shpsholidayhometour.com/index.html
@@ -145,11 +145,13 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
       border=0>
           <TBODY>
             <TR> 
-              <TD height=12 align=middle class=footertext2><div align="center"><FONT 
+              <TD height=12 align=middle class=footertext2> &nbsp;
+              <!--<div align="center"><FONT 
             color=#333333>&nbsp; <br>
                   </FONT> <FONT 
             color=#333333> site by <a href="http://www.designsbycp.com/" target="_blank">designsbycp.com</a><br>
-                  <br></FONT></div></TD>
+                  <br></FONT></div> -->
+                  </TD>
                   <TD style="width:200px;">
                    <!-- <div align="right">
                     <a href="https://www.facebook.com/SacredHeartHomeTour" target="_blank"><img src="images/facebook.png"></a>
