[update]as per ZD-52785

--- a/public/shpsholidayhometour.com/boutique-cafe.htm
+++ b/public/shpsholidayhometour.com/boutique-cafe.htm
@@ -24,7 +24,10 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
            <p>Shop for one of a kind holiday gifts and dine in a convenient, festive atmosphere. Tour tickets are not required for admission to the Boutique & caf&eacute; - all are welcome.</p>
            <p>The Holiday Caf&eacute; & Boutique, feature unique gifts & holiday merchandise selected exclusively for Sacred Heart by designers & style experts.</p>
            <p>While you are there treat yourself to the renowned Home Tour caf&eacute;, featuring tasty sandwiches, fresh salads, toasty soups and gourmet desserts. Specialty coffee, tea, mulled cider, soda, wine and beer are also available.</p>
-           <p>The Treasured Home<br/>
+
+<p align="left"><br/>
+            <B><FONT size=3>Boutique Vendors</FONT></B></p>
+            <p>The Treasured Home<br/>
 <a href="https://www.thetreasuredhome.com/" target="_blank">www.thetreasuredhome.com</a></p>
 
 <p>J. Brian's Valley Harvest</p>
@@ -44,7 +47,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 
 <p>Serendipity Succulents</p>
 
-<p>It’s In the Bag</p>
+<p>It's In the Bag</p>
 
 <p>Tila Madrigal</p>
 
