--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -22,20 +22,27 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             <B><FONT size=3>The Designers
             </FONT></B></p>
             <!--<p>Coming Soon!</p>-->
-            <p><em>Andy Rodriguez Design</em><br/>
-Beyond the Garden Gate<br/>
-1015 Olive Drive, Davis, CA 95616<br/>
-<a href="http://www.beyondthegardengates.com " target="_blank">beyondthegardengates.com</a></p>
-
-<p><em>Design Alchemy</em><br/>
-855 57th Street Ste. D, Sacramento, CA 95818<br/>
-<a href="http://designalchemyltd.com" target="_blank">designalchemyltd.com</a></p>
-
-<p><em>Elizabeth Lake Design</em><br/>
-Kerrie Kelly<br/>
+            <p><strong>Kerrie Kelly</strong><br/>
 Kerrie Kelly Design Lab<br/>
 5704 Elvas Avenue, Sacramento, CA 95819<br/>
 <a href="http://kerriekelly.com" target="_blank">kerriekelly.com</a></p>
+<p><strong>Elizabeth Lake Design</strong></p>
+            <p><strong>Andy Rodriguez Design</strong><br/>
+            Andel & Co.<br/> 
+Design Events Holiday <br/>
+<a href="http://www.andelandco.com/" target="_blank">www.andelandco.com</a>
+            </p>
+            <p><strong>Design Alchemy</strong><br/>
+855 57th Street Ste. D, Sacramento, CA 95818<br/>
+<a href="http://designalchemyltd.com" target="_blank">designalchemyltd.com</a></p>
+<p><strong>Beyond the Garden Gate</strong><br/>
+1015 Olive Drive, Davis, CA 95616<br/>
+<a href="http://www.beyondthegardengates.com" target="_blank">beyondthegardengates.com</a></p>
+
+
+
+
+
 <!--<p>
 <FONT size=3><font size="2">The designers who are generously lending their time &amp; talents to the tour: </font></FONT></p>
           
