--- a/public/shpsholidayhometour.com/index.html
+++ b/public/shpsholidayhometour.com/index.html
@@ -42,26 +42,20 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
               <TD height="254">
 <div align="center" style="position:relative;">
 	<div class="slide" style="position:absolute; width:230px; height:180px; left:10px; top:6px;">
-  <img src="images/941_sonoma_way.jpg" alt="941 Sonoma Way" width="230" height="180" />
-  <img src="images/1300_44th_street.jpg" alt="1300 44th Street" width="230" height="180" />
-  <img src="images/1600_42nd_street.jpg" alt="1600 42nd Street" width="230" height="180" />
-  <img src="images/1112_41st_street.jpg" alt="1112 41st Street" width="230" height="180" />
-  <img src="images/1037_42nd_street.jpg" alt="1037 42nd Street" width="230" height="180" />
+  <img src="homes16/images/941_sonoma_way.jpg" alt="941 Sonoma Way" width="230" height="180" />
+  <img src="homes16/images/1112_41st_street.jpg" alt="1112 41st Street" width="230" height="180" />
+  <img src="homes16/images/1037_42nd_street.jpg" alt="1037 42nd Street" width="230" height="180" />
+  <img src="homes16/images/1600_42nd_street.jpg" alt="1600 42nd Street" width="230" height="180" />
+  <img src="homes16/images/1300_44th_street.jpg" alt="1300 44th Street" width="230" height="180" />
+  
 
-    <img src="homes15/images/38th-street-sml-2015.jpg" alt="38th Street 2015" width="230" height="180" />
+    <!--<img src="homes15/images/38th-street-sml-2015.jpg" alt="38th Street 2015" width="230" height="180" />
     <img src="homes15/images/41st-street-sml-2015.jpg" alt="41st Streets 2015" width="230" height="180" />
     <img src="homes15/images/43rd-street-sml-2015.jpg" alt="43rd Streets 2015" width="230" height="180" />
 		<img src="homes15/images/47th-street-sml-2015.jpg" alt="47th Streets 2015" width="230" height="180" />
     <img src="homes15/images/m-street-sml-2015.jpg" alt="M Streets 2015" width="230" height="180" />
-    
+    -->
   </div>
-  <!--<div class="slide" style="position:absolute; width:230px; height:180px; left:10px; top:6px;">
-    <img src="homes12/images/38th-streets-2012.jpg" alt="38th Streets" width="230" height="180" />
-    <img src="homes12/images/42nd-streets.jpg" alt="42nd Streets" width="230" height="180" />
-    <img src="homes12/images/45th-streets.jpg" alt="45th Streets" width="230" height="180" />
-    <img src="homes12/images/46th-streets.jpg" alt="46th Streets" width="230" height="180" />
-    <img src="homes12/images/47th-streets-2012.jpg" alt="47th Streets" width="230" height="180" />
-  </div> -->
                   <MAP name=FPMap0>
                     <AREA shape=RECT target=iframe1 alt=Home 
               coords=100,291,172,313 href="tickets.htm">
