[update]add new home story-#133498653

--- a/public/shpsholidayhometour.com/index.html
+++ b/public/shpsholidayhometour.com/index.html
@@ -47,6 +47,7 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
   <img src="homes16/images/1037_42nd_street.jpg" alt="1037 42nd Street" width="230" height="180" />
   <img src="homes16/images/1600_42nd_street.jpg" alt="1600 42nd Street" width="230" height="180" />
   <img src="homes16/images/1300_44th_street.jpg" alt="1300 44th Street" width="230" height="180" />
+  <img src="homes16/images/1338_42nd_Street.jpg" alt="1300 44th Street" width="230" height="180" />
   </div>
                   <MAP name=FPMap0>
                     <AREA shape=RECT target=iframe1 alt=Home 
