[updates]add new designer and cafe content story-#134668271

--- a/public/shpsholidayhometour.com/boutique-cafe.htm
+++ b/public/shpsholidayhometour.com/boutique-cafe.htm
@@ -27,40 +27,43 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 
 <p align="left"><br/>
             <B><FONT size=3>Boutique Vendors</FONT></B></p>
-            <p>The Treasured Home<br/>
+            <p>&#8226; The Treasured Home<br/>
 <a href="https://www.thetreasuredhome.com/" target="_blank">www.thetreasuredhome.com</a></p>
 
-<p>J. Brian's Valley Harvest</p>
+<p>&#8226; J. Brian's Valley Harvest</p>
 
-<p>Pink House</p>
-<p>Design Alchemy<br/>
+<p>&#8226; Pink House</p>
+<p>&#8226; Design Alchemy<br/>
 <a href="http://designalchemyltd.com/" target="_blank">designalchemyltd.com</a></p>
 
-<p>Alllie Studios<br/>
+<p>&#8226; Alllie Studios<br/>
 <a href="http://alliestudio.com/t/sacramento" target="_blank">alliestudio.com/t/sacramento</a></p>
 
-<p>Murphy & Gert</p>
+<p>&#8226;  Murphy & Gert</p>
 
-<p>Vintage Pop Art</p>
+<p>&#8226; Vintage Pop Art</p>
 
-<p>C & C Distributors</p>
+<p>&#8226; C & C Distributors</p>
 
-<p>Serendipity Succulents</p>
+<p>&#8226; Serendipity Succulents</p>
 
-<p>It's In the Bag</p>
+<p>&#8226; It's In the Bag</p>
 
-<p>Tila Madrigal</p>
+<p>&#8226; Tila Madrigal</p>
 
-<p>Rina DeRose</p>
+<p>&#8226; Rina DeRose</p>
 
-<p>The Little Way</p>
+<p>&#8226; The Little Way</p>
 
-<p>Renee Luckenbill</p>
+<p>&#8226; Renee Luckenbill</p>
 
-<p>Beyond the Garden Gate<br/>
+<p>&#8226; Beyond the Garden Gate<br/>
 <a href="http://beyondthegardengates.com/" target="_blank">beyondthegardengates.com</a></p>
 
-<p>Schola Cantorum</p><br/>
+<p>&#8226; Schola Cantorum</p>
+
+<p>&#8226; Follow the Signs Shop</p>
+
 
         </blockquote>
         
