--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -35,9 +35,15 @@ Design Events Holiday <br/>
             <p><strong>Design Alchemy</strong><br/>
 855 57th Street Ste. D, Sacramento, CA 95818<br/>
 <a href="http://designalchemyltd.com" target="_blank">designalchemyltd.com</a></p>
+
 <p><strong>Beyond the Garden Gate</strong><br/>
 1015 Olive Drive, Davis, CA 95616<br/>
 <a href="http://www.beyondthegardengates.com" target="_blank">beyondthegardengates.com</a></p>
+
+
+<p><strong>Kristine Renee Designs</strong><br/>
+2413 J Street, Sacramento, 95816<br/>
+<a href="http://www.kristinerenee.com" target="_blank">www.kristinerenee.com</a></p>
 
 
 
