[Updates]add info in designer page

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -26,7 +26,12 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 Kerrie Kelly Design Lab<br/>
 5704 Elvas Avenue, Sacramento, CA 95819<br/>
 <a href="http://kerriekelly.com" target="_blank">kerriekelly.com</a></p>
-<p><strong>Elizabeth Lake Design</strong></p>
+
+<p><strong>Elizabeth Lake Design</strong><br/>
+916-316-7878<br/> 
+<a href="mailto:Elizabeth@lumens.com">Elizabeth@lumens.com</a>
+</p>
+            
             <p><strong>Andy Rodriguez Design</strong><br/>
             Andel & Co.<br/> 
 Design Events Holiday <br/>
