--- a/public/shpsholidayhometour.com/index.html
+++ b/public/shpsholidayhometour.com/index.html
@@ -3,16 +3,12 @@
     <TITLE>Holiday Home Tour</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=windows-1252">
 <META content=no-cache>
-<META 
-content="" 
-name=keywords>
-<META 
-content="" 
-name=description><LINK href="files/hhtCSS.css" type=text/css 
-rel=stylesheet>
+<META content="" name=keywords>
+<META content="" name=description>
+<LINK href="files/hhtCSS.css" type=text/css rel=stylesheet>
 <META content="" name=GENERATOR>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-  <script src="//commoncode.insightmethods.info/sites/4e2fd419b4dd800216000215/theme/javascripts/fadeinslider/jquery.cycle.all.min.js" type="text/javascript"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle/2.99/jquery.cycle.all.min.js" type="text/javascript"></script>  
   <script type="text/javascript">
     $(document).ready(function(){
     //fadeinslider
